# arbitrage

./: CMakeLists.txt  README.md
http/: CMakeLists.txt  http_get.cpp  http_get.h
src/: AlgorithmBuyAndSell.cpp  AlgorithmBuyAndSell.h  CMakeLists.txt  ConvertToCryptoConversionInfo.cpp  ConvertToCryptoConversionInfo.h  ConvertToPriceInfoBeta.cpp  ConvertToPriceInfoBeta.h  CrytpoConversionInfo.h  DataBase.cpp  DataBase.h  ExpandToPriceInfoBeta.cpp  ExpandToPriceInfoBeta.h  MarketConnector.cpp  MarketConnector.h  Parser.cpp  Parser.h  PriceInfo.h  PriceInfoBeta.h  Price_info.h  http_get.cpp  main.cpp  market_connector.cpp
test/: AlgorithmBuyAndSell_test.cpp  CMakeLists.txt  ConvertToCrytpoConversionInfo_test.cpp  ConvertToPriceInfoBeta_test.cpp  DataBase_test.cpp  ExpandToPriceInfoBeta_test.cpp  Parser_test.cpp  dummy_test.cpp
